k8s/development/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
    - port: 9379
      targetPort: 6379
      name: redis
      protocol: TCP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        version: DEV
      # annotations:
      #   sidecar.istio.io/inject: "True"
      # necessário executar o seguinte comando para injetar o sidecar via istio
      # istioctl kube-inject -f k8s/development/postgres.yml | kubectl apply -f -
    spec:
      containers:
        - name: redis
          image: redis:6-buster
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-volume
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: redis-virtual-service
# spec:
#   hosts:
#     # nome do service declarado no kubernetes
#     - redis
#   tcp:
#     - route:
#         - destination:
#             host: redis
#             subset: development

# ---
# apiVersion: networking.istio.io/v1beta1
# kind: DestinationRule
# metadata:
#   name: redis-destination-rule
# spec:
#   # nome do service declarado no kubernetes
#   host: redis
#   trafficPolicy:
#     loadBalancer:
#       simple: ROUND_ROBIN
#   subsets:
#     - name: development
#       labels:
#         version: DEV
#       trafficPolicy:
#         loadBalancer:
#           simple: LEAST_CONN
