k8s/development/go-barber-api.yml
apiVersion: v1
kind: Service
metadata:
  name: gobarber-api-service-dev
spec:
  type: LoadBalancer
  selector:
    app: gobarber-api-dev
  ports:
    - port: 8002
      targetPort: 3333
      # nova porta definida, pois a porta 30002 foi apontada para o ingress gateway
      nodePort: 30004
      # porta do cluster
      # nodePort: 30002
      name: http
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gobarber-api-dev-v1
spec:
  selector:
    matchLabels:
      app: gobarber-api-dev
  replicas: 2
  template:
    metadata:
      labels:
        app: gobarber-api-dev
        version: A
    spec:
      containers:
        - name: gobarber-api-dev
          image: andradereginaldo/gobarber_api:1.5.0-14-debian-buster

          startupProbe:
            httpGet:
              path: /readyz
              port: 3333
            periodSeconds: 3
            failureThreshold: 10

          readinessProbe:
            httpGet:
              path: /readyz
              port: 3333
            periodSeconds: 3
            initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /readyz
              port: 3333
            periodSeconds: 5
            failureThreshold: 5
            initialDelaySeconds: 15

          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 3333

          volumeMounts:
            - mountPath: "/go_barber/volume"
              name: gobarber-api-dev-volume

      volumes:
        - name: gobarber-api-dev-volume
          persistentVolumeClaim:
            claimName: gobarber-api-dev-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gobarber-api-dev-v2
spec:
  selector:
    matchLabels:
      app: gobarber-api-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: gobarber-api-dev
        version: B
    spec:
      containers:
        - name: gobarber-api-dev
          image: andradereginaldo/gobarber_api:1.5.0-14-debian-buster

          startupProbe:
            httpGet:
              path: /readyz
              port: 3333
            periodSeconds: 3
            failureThreshold: 10

          readinessProbe:
            httpGet:
              path: /readyz
              port: 3333
            periodSeconds: 3
            initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /readyz
              port: 3333
            periodSeconds: 5
            failureThreshold: 5
            initialDelaySeconds: 15

          resources:
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 3333

          volumeMounts:
            - mountPath: "/go_barber/volume"
              name: gobarber-api-dev-volume

      volumes:
        - name: gobarber-api-dev-volume
          persistentVolumeClaim:
            claimName: gobarber-api-dev-pvc

---
#gateway com domínio
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gobarber-ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
        - "*.gobarber"

---
# virtual service com subdomínio
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gobarber-api-auth-virtual-service
spec:
  hosts:
    - "auth.gobarber"
  gateways:
    - "gobarber-ingress-gateway"
  http:
    - route:
        - destination:
            host: gobarber-api-service-dev
            subset: v2

---
# virtual service com subdomínio
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gobarber-api-services-virtual-service
spec:
  hosts:
    - "services.gobarber"
  gateways:
    - "gobarber-ingress-gateway"
  http:
    - route:
        - destination:
            host: gobarber-api-service-dev
            subset: v1

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: gobarber-api-destination-rule
spec:
  host: gobarber-api-service-dev
  subsets:
    - name: v1
      labels:
        version: A
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
        #circuit breaker
        outlierDetection:
          consecutiveGatewayErrors: 5
          interval: 20s
          baseEjectionTime: 30s
          maxEjectionPercent: 100
    - name: v2
      labels:
        version: B
      trafficPolicy:
        #circuit breaker
        outlierDetection:
          consecutiveGatewayErrors: 5
          interval: 20s
          baseEjectionTime: 30s
          maxEjectionPercent: 100
# ---
# gateway sem domínio
# apiVersion: networking.istio.io/v1beta1
# kind: Gateway
# metadata:
#   name: gobarber-ingress-gateway
# spec:
#   selector:
#     istio: ingressgateway
#   servers:
#     - port:
#         number: 80
#         name: http
#         protocol: http2
#       hosts:
#         - "*"

# ---
# virtual service sem domínio
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: gobarber-api-virtual-service
# spec:
#   hosts:
#     - "*"
#   gateways:
#     - "gobarber-ingress-gateway"
#   http:
#     - match:
#         - uri:
#             prefix: "/sessions"
#       route:
#         - destination:
#             host: gobarber-api-service-dev
#             subset: v2
#     - match:
#         - uri:
#             prefix: "/providers"
#       route:
#         - destination:
#             host: gobarber-api-service-dev
#             subset: v1
#     # router a partir de pesos em subsets
#     # - route:
#     #     - destination:
#     #         host: gobarber-api-service-dev
#     #         subset: v1
#     #       weight: 80
#     #     - destination:
#     #         host: gobarber-api-service-dev
#     #         subset: v2
#     #       weight: 20
